--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
           </ul>
         </div>
       </div>
+      <div class="error_block">
+        <h2>Find Out Errors At a Glance</h2>
+        <p>Forget black screen full of millions of unreadable errors.</p>
+        <img src="https://prepros.io/img/error-message.png">
+      </div>
       <footer>
         
       </footer>
